--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -10,6 +10,7 @@
       "typecheck": "tsc --noEmit"
     },
     "devDependencies": {
+      "@sisman/prisma": "workspace:*"
     },
     "peerDependencies": {
     }
