--- a/apps/backend/.prettierrc
+++ b/apps/backend/.prettierrc
@@ -1,4 +1,13 @@
 {
+  "arrowParens": "always",
   "singleQuote": true,
-  "trailingComma": "all"
+  "tabWidth": 2,
+  "trailingComma": "es5",
+  "semi": true,
+  "proseWrap": "always",
+  "printWidth": 80,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "bracketSameLine": false,
+  "objectWrap": "preserve"
 }
