--- a/apps/frontend/.prettierrc
+++ b/apps/frontend/.prettierrc
@@ -3,7 +3,7 @@
   "singleQuote": true,
   "jsxSingleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "es5",
+  "trailingComma": "none",
   "semi": true,
   "proseWrap": "always",
   "printWidth": 80,
