--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-select": "^2.2.2",
     "@radix-ui/react-slot": "^1.2.0",
     "@sisman/types": "workspace:*",
+    "@tanstack/react-form": "^1.11.1",
     "@tanstack/react-table": "^8.21.3",
     "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
@@ -32,8 +34,8 @@
     "ua-parser-js": "^2.0.3"
   },
   "devDependencies": {
-    "@sisman/types": "workspace:*",
     "@sisman/prisma": "workspace:*",
+    "@sisman/types": "workspace:*",
     "@tailwindcss/postcss": "^4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
