--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@sisman/types": "workspace:*",
     "@tanstack/react-form": "^1.11.1",
+    "@tanstack/react-store": "^0.7.0",
     "@tanstack/react-table": "^8.21.3",
     "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
@@ -31,7 +32,8 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
-    "ua-parser-js": "^2.0.3"
+    "ua-parser-js": "^2.0.3",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@sisman/prisma": "workspace:*",
