--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/platform-express": "^11.1.0",
+    "@nestjs/schedule": "^5.0.1",
     "@nestjs/swagger": "^11.1.6",
     "@nestjs/throttler": "^6.4.0",
     "@sisman/prisma": "workspace:*",
@@ -42,6 +43,7 @@
     "moment-timezone": "^0.5.48",
     "nest-winston": "^1.10.2",
     "nodemailer": "^6.10.1",
+    "p-throttle": "^7.0.0",
     "prom-client": "^15.1.3",
     "pug": "^3.0.3",
     "reflect-metadata": "^0.2.2",
@@ -50,6 +52,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@nestjs/axios": "^4.0.0",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
     "@nestjs/testing": "^11.1.0",
@@ -62,6 +65,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
+    "axios": "^1.9.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
     "jest": "^29.7.0",
