--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -40,16 +40,13 @@
     "date-fns-tz": "^3.2.0",
     "joi": "^17.13.3",
     "lodash": "^4.17.21",
-    "moment-timezone": "^0.5.48",
-    "nest-winston": "^1.10.2",
     "nodemailer": "^6.10.1",
     "p-throttle": "^7.0.0",
     "prom-client": "^15.1.3",
     "pug": "^3.0.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "swagger-ui-express": "^5.0.1",
-    "winston": "^3.17.0"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/axios": "^4.0.0",
