chore: configurações de ambientes de desenvolvimento e produção

--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -18,8 +18,8 @@ services:
       .env
       # - ${ENV_FILE_RMQ}
       # - ${ENV_FILE_KC}
-    # volumes:
-    #   - .:/home/node/sisman-monorepo
+    volumes:
+      - .:/home/node/sisman-monorepo
     restart: unless-stopped
     depends_on:
       - db
