--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -16,7 +16,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "seed": "ts-node -r tsconfig-paths/register src/shared/prisma/seed.ts",
+    "seed": "node dist/shared/prisma/seed.js",
+    "seed:dev": "ts-node -r tsconfig-paths/register src/shared/prisma/seed.ts",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
