--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -21,9 +21,11 @@
     "@tanstack/react-form": "^1.11.1",
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/date-fns": "^2.6.3",
     "chalk": "^5.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "jose": "^6.0.10",
     "lucide-react": "^0.487.0",
     "next": "15.2.2",
