--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,9 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 /_data
 /data/*/*/*
 !/data/*/*/.gitkeep
+
+#Server
+/.server/*/*/*
+!/.server/*/*/.git
+
+.token*
