--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -42,6 +42,7 @@
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "ua-parser-js": "^2.0.3",
+    "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
   "devDependencies": {
