--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -22,6 +22,7 @@
       "@/*": ["./*"],
       "@/assets/*": ["./public/assets/*"],
       "@/components/*": ["./src/components/*"],
+      "@/hooks/*": ["./src/hooks/*"],
       "@/lib/*": ["./src/lib/*"],
       "@/app/*": ["./src/app/*"]
     }
