--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -39,6 +39,7 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.5",
     "ua-parser-js": "^2.0.3",
