fix: alias type action

--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -24,6 +24,7 @@
       "@/components/*": ["./src/components/*"],
       "@/hooks/*": ["./src/hooks/*"],
       "@/lib/*": ["./src/lib/*"],
+      "@/types/*": ["./src/types/*"],
       "@/app/*": ["./src/app/*"]
     }
   },
