--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -25,6 +25,8 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@sisman/types": "workspace:*",
     "@tanstack/react-form": "^1.11.1",
+    "@tanstack/react-query": "^5.85.5",
+    "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-store": "^0.7.0",
     "@tanstack/react-table": "^8.21.3",
     "@types/date-fns": "^2.6.3",
