feat: verificacao se db existe em producao

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,7 +18,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "seed:prod": "node dist/shared/prisma/seed.js",
     "seed:dev": "ts-node -r tsconfig-paths/register src/shared/prisma/seed.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "check-db-seeded": "node dist/shared/prisma/check-database-exists.js"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
