--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -9,8 +9,9 @@ services:
       dockerfile: Dockerfile.dev
     container_name: sisman-monorepo
     ports:
-      - 3080:3080
-      - 3000:3000
+      - 3000:${PORT_FRONTEND}
+      - 3080:${PORT_BACKEND}
+      # - 3010:${PORT_SCRAPING}
     environment:
       ENV: dev
       TZ: America/Sao_Paulo
@@ -34,7 +35,7 @@ services:
       MARIADB_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_SCHEMA}${ENV}
     ports:
-      - 3306:3306
+      - 3306:${DB_PORT}
     env_file:
       .env
     volumes:
