--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,8 @@ services:
       dockerfile: Dockerfile
     container_name: sisman-monorepo
     ports:
-      - 3000:${PORT_FRONTEND}
-      - 3080:${PORT_BACKEND}
+      - ${PORT_FRONTEND_EXPOSE}:${PORT_FRONTEND}
+      - ${PORT_BACKEND_EXPOSE}:${PORT_BACKEND}
       # - 3010:${PORT_SCRAPING}
     environment:
       ENV: ${ENV}
