--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -37,6 +37,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "embla-carousel-react": "^8.6.0",
     "jose": "^6.0.10",
     "lucide-react": "^0.487.0",
