--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -13,7 +13,7 @@ services:
       - ${PORT_BACKEND_EXPOSE}:${PORT_BACKEND}
       # - 3010:${PORT_SCRAPING}
     environment:
-      ENV: dev
+      ENV: development
       TZ: America/Sao_Paulo
     env_file:
       .env
